syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeyManagerGrpc";

package br.com.zup;

service KeyManagerGrpcService {
  rpc novaChavePix (NovaChavePixRequest) returns (NovaChavePixResponse) {}
  rpc removeChavePix (RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

enum TipoChave {
  UNKNOWN_TYPE = 0;
  CPF = 1;
  TELEFONE = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}

enum TipoConta {
  UNKNOWN_ACCOUNT = 0;
  CONTA_POUPANCA = 1;
  CONTA_CORRENTE = 2;
}

message NovaChavePixRequest {
  string identificadorCliente = 1;
  TipoChave tipoChave = 2;
  string valorChave = 3;
  TipoConta tipoConta = 4;
}

message NovaChavePixResponse {
  string chavePix = 1;
  string clienteId = 2;
}

message RemoveChavePixRequest {
  string pixId = 1;
  string clienteId = 2;
}

message RemoveChavePixResponse {
  string mensagem = 1;
}